--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,67 +2,56 @@
 
 body {
     margin: 0;
-    background: #070606;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
-.page {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
+h1 {
+    text-align: center;
+    font-size: 32px;
+    font-family: 'Gyre Adventor';
+    text-transform: uppercase;
+    letter-spacing: 3px;
 }
 
-.hero {
-    width: 50%;
-    background: black;
+h2 {
+    font-size: 18px;
+    font-family: 'PT Serif', serif;
+    line-height: 1.2;
+    text-align: center;
+    font-weight: 700;
+    font-style: italic;
+    color: $color-brand;
     position: relative;
-    background: #070606;
-    background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/743f7b68865467.5b6c0893079cd.gif');
-    background-size: 80%;
-    background-repeat: no-repeat;
-    background-position: center;
-
-    .logo {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        top: 24px;
-        width: 64px;
-        left: 50%;
-        transform: translateX(-50%);
-
-        svg {
-            width: 64px;
-            fill: #404a4a;
-        }
-    }
-
-    .navToggle {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        bottom: 24px;
-        width: 48px;
-        height: 48px;
-        border-radius: 50%;
-        background: #404a4a;
-        left: 50%;
-        opacity: 1;
-        transform: translateX(-50%);
-        transition: opacity 0.5s;
-        cursor: pointer;
-
-        svg {
-            width: 24px;
-            height: 24px;
-            fill: #070606;
-        }
-    }
+    display: block;
+    margin: 0 auto;
+    opacity: 0.5;
 }
 
-.content {
-    width: 50%;
-    background: #fff;
+h3 {
+    text-align: center;
+    font-size: 16px;
+    font-family: 'Gyre Adventor';
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+p {
+    font-size: 20px;
+    font-family: 'PT Serif', serif;
+    line-height: 1.6;
+    font-weight: 400;
+    margin: 48px auto;
+    color: $color-brand;
+    max-width: 40ch;
+}
+
+hr {
+    width: 15%;
+    background-color: $color-brand;
+    height: 1px;
+    border: none;
+    opacity: 0.3;
+    margin: 48px auto;
 }
