--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -12,4 +12,20 @@
     @media (max-width: 980px) {
         width: 100vw;
     }
+
+    .nav-toggle {
+        cursor: pointer;
+        opacity: 0.4;
+        transition: opacity 0.25s;
+        svg {
+            width: 64;
+            height: 64px;
+            flex-shrink: 0;
+            transition: fill 0.35s;
+        }
+
+        &:hover {
+            opacity: 1;
+        }
+    }
 }
